overflow fix

--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -75,7 +75,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow-x: auto;
+    overflow-y: auto;
   
   }
   
